removing this fixes flickering for @RReverser

--- a/public/less/trpAppsPage.less
+++ b/public/less/trpAppsPage.less
@@ -112,7 +112,6 @@ a {
   height: 100%;
   text-align: center;
   overflow-x: hidden;
-  overflow-y: scroll;
   display: block;
   margin-bottom: 0px;
   padding-bottom: 0px;
